<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageV"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@color/blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="88dp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/unBlast"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageV"
        app:layout_constraintTop_toTopOf="@id/imageV" />

    <TextView
        android:id="@+id/timePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/time"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/imageV"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/earthImage"
        android:src="@drawable/earth"
        app:layout_constraintBottom_toBottomOf="@id/timePost"
        app:layout_constraintStart_toEndOf="@id/timePost"
        app:layout_constraintTop_toTopOf="@id/timePost" />

    <TextView
        android:id="@+id/firstCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/postCaption"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageV" />

    <TextView
        android:id="@+id/captionTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captionTwo"
        android:textColor="@color/lightBlue"
        app:layout_constraintStart_toStartOf="@id/firstCaption"
        app:layout_constraintTop_toBottomOf="@id/firstCaption" />

    <ImageView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagepost"
        android:src="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/captionTwo" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/likeIcon"
        android:src="@drawable/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/howManyLikes"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like" />

    <TextView
        android:id="@+id/shares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/howManyShares"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likes" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/sharesProfile"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:src="@color/blue"
        app:layout_constraintBottom_toBottomOf="@id/shares"
        app:layout_constraintStart_toEndOf="@id/shares"
        app:layout_constraintTop_toTopOf="@id/shares" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shareShow"
        android:src="@drawable/downarrow"
        app:layout_constraintBottom_toBottomOf="@id/sharesProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sharesProfile" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/like" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/like"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:icon="@drawable/likee"
            app:iconSize="24dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/comment"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:icon="@drawable/comment"
            app:iconSize="24dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:icon="@drawable/share"
            app:iconSize="24dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>